--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,10 +1,9 @@
 name: RunsafeInventories
 main: no.runsafe.runsafeinventories.Plugin
 version: 1.0.@BUILD@
-authors: []
+authors: [Kruithne]
 depend: []
 description:
 commands:
-  something:
-    description:
-    aliases: []
+  wipeworld:
+    description: Removes all database inventories for a world.
