--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -6,3 +6,6 @@ description: Plugin for controlling inventories across worlds
 commands:
   wipeworld:
     description: Removes all database inventories for a world.
+  clearinventory:
+    description: Clears a players inventory
+    aliases: [ci]
