Implemented DropItems command.

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -9,3 +9,5 @@ commands:
   clearinventory:
     description: Clears a players inventory
     aliases: [ci]
+  dropitems:
+    description: Causes a player to drop all of their items.
