Added aliases for inventory command

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -8,3 +8,4 @@ commands:
     description: Removes all database inventories for a world.
   inventory:
     description: Inventory handling commands
+    aliases: [inv]
